Working on Signup Page. Grid layout corrected.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <!-- <link rel="stylesheet" href="assets/bootstrap-grid.min.css" /> -->
   </head>
   <body>
     <app-root></app-root>
