--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
   </head>
   <body class="mat-typography">
     <app-root></app-root>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   </body>
 </html>
