--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 
-    <link rel="icon" href="assets/favicon.png" />
+    <link rel="icon" href="assets/favicon.ico" />
     <title>ledgerkeep Inc. | Manage your expenses intuitively.</title>
 
     <!-- Fonts -->
